<resources>
    <string name="app_name">Ski Lift</string>
    <string name="slSearchPH">Where to?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_type">User Type</string>
    <string name="requester">Requester</string>
    <string name="actionRequest">Request a Ride</string>
    <string name="actionProvide">Provide a Ride</string>
    <string name="provider">Provider</string>
    <string name="help">Help/Support</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="information">Information</string>
    <string name="send">Send</string>
    <string name="next_page">Next Page</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="price">Price</string>
    <string name="waiting_for_requester">Waiting for requester</string>
    <string name="list_of_rides">Ride List</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="received_text">Received Text</string>
    <string name="coordinate_ride_nthrough_text">Coordinate ride\nthrough text</string>
    <string name="finished_ride">Finished Ride</string>
    <string name="phone_nnumber">Phone\nNumber</string>
    <string name="googleApiKey">AIzaSyD3t1r5hxMOVfPiBphOuTmJhErcHO0m-Pg</string>
    <string name="email">Email</string>
    <string name="signOut">Sign Out</string>
    <string name="createAccount">Create Account</string>
    <string name="err_msg_password">Password must be at least 8 characters, with at least one of each: number, letter, special symbol.</string>
    <string name="err_msg_email">Email is not a valid form.</string>
    <string name="err_msg_incorrect_any">Username or password is incorrect.</string>
    <string name="err_msg_no_user">There is no account with this email.</string>
    <string name="app_title">Ski Lift</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create</string>
    <string name="finish">Finish</string>
    <string name="finishAccount">Finish Creation</string>
    <string name="confirm_destination">Confirm Destination</string>
    <string name="chat_history">Chat History</string>
    <string name="pick_a_ride">Pick a Ride</string>
    <string name="pick_a_request">Pick a Request</string>
    <string name="list_of_requests">List of Requests</string>
    <string name="filterHint">Search</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_ski_lift_settings">Settings</string>

    <!-- Stripe Public key -->
    <string name="stripe_public_key">pk_test_GvnlbjP9Qggx4F631gzDbyRX00hltajVIV</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="display">Display</string>
    <string name="key_dark_theme_toggle">DarkThemeToggle</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="my_account">My Account</string>
    <string name="chats">Chats</string>
</resources>