<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".FinishGoogleAccount"
android:background="@drawable/login_background">

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:ccp_autoDetectCountry="true"
        app:layout_constraintEnd_toStartOf="@+id/phoneInputLayout"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/createAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/finishAccount"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="@+id/createAccountTextView"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
        app:layout_constraintWidth_max="400dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_24dp"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishAccountButton"

        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:text="@string/finish"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneInputLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>